--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@
  * governing permissions and limitations under the License.
  */
 
-:root {
+ :root {
     /* colors */
     --background-color: white;
     --light-color: #f8f8f8;
@@ -231,7 +231,6 @@ button.secondary {
 main img {
     max-width: 100%;
     width: auto;
-    height: auto;
 }
 
 .icon {
